--- a/Receiver/Makefile
+++ b/Receiver/Makefile
@@ -5,5 +5,5 @@ CLEAN_EXTRA = *.class Message.java
 Receiver.class: $(wildcard *.java) Message.java
 	javac -target 1.4 -source 1.4 *.java
 Message.java:
-	mig java -target=null -java-classname=Message Message.h Temperature_Msg -o $(@)
+	mig java -target=null -java-classname=Message Message.h SenseMsg -o $(@)
 include $(MAKERULES)
